<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/send_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_text"/>

    <Button
        android:id="@+id/send_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/send_text"
        android:text="@string/share_img"/>
    <Button
        android:id="@+id/send_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/send_img"
        android:text="@string/share_video"/>

    <Button
        android:id="@+id/sign_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/send_video"
        android:text="@string/sign_out"/>

</RelativeLayout>