<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="10dp"
        android:orientation="vertical">


            <EditText
                android:id="@+id/register_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_hint"
                android:textSize="15sp"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:maxLines="1"
                android:singleLine="true" />


            <EditText
                android:id="@+id/register_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="6"
                android:padding="10dp"
                android:textSize="15sp"
                android:layout_below="@id/register_account"
                android:layout_marginTop="20dp"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />


        <EditText
            android:id="@+id/confirm_pass"
            android:hint="@string/confirm_password"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="10dp"
            android:layout_below="@id/register_pass"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <Button
            android:id="@+id/register_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/confirm_pass"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_back"
            android:text="@string/register_oauth"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

</RelativeLayout>

<!-- 注册界面  -->