<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dp">


    <TextView
        android:id="@+id/location"
        android:textColor="@color/gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/location"/>

    <TextView
        android:id="@+id/user_location"
        android:layout_below="@id/location"
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:layout_marginStart="25dp"
        android:layout_height="wrap_content"
        tools:text="北京"/>
    <TextView
        android:id="@+id/sex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_location"
        android:layout_marginTop="30dp"
        android:textColor="@color/gray"
        android:layout_marginStart="10dp"
        android:text="@string/sex"/>

    <TextView
        android:id="@+id/user_sex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sex"
        android:layout_marginTop="10dp"
        android:layout_marginStart="25dp"
        android:textColor="@color/black"
        tools:text="男"/>


    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_sex"
        android:layout_marginTop="30dp"
        android:textColor="@color/gray"
        android:layout_marginStart="10dp"
        android:text="@string/time"/>

    <TextView
        android:id="@+id/user_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/time"
        android:layout_marginTop="10dp"
        android:layout_marginStart="25dp"
        android:textColor="@color/black"
        tools:text="2013-3-5"/>

</RelativeLayout>